<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PartyGuard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="party">Party</string>
    <string name="guard">Guard</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot your Password?</string>
    <string name="or">or Log In With</string>
    <string name="account">Don\'t Have an Account?</string>
    <string name="sign">Create Account</string>
    <string name="host">Host User Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup">Sign -</string>
    <string name="up">Up</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="emailid">Email Address</string>
    <string name="repeatpass">Repeat Password</string>
    <string name="phone">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="pin">PIN</string>
    <string name="title_activity_login__intro_slider">Login_IntroSlider</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_dashboard__profile">Dashboard_Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_dashboard_unsafe">Dashboard_unsafe</string>
    <string name="title_activity_fragment_dashboard_alertdialog">Fragment_dashboard_alertdialog</string>
    <string name="title_activity_dashboard__fragment">Dashboard_Fragment</string>
    <string name="title_activity_host__login">Host_Login</string>
    <string name="comment">A guy wont leave me alone after i\'ve told him to multiple times</string>


</resources>
