<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pgpgpg"
    tools:context="com.example.s525351.androidsample1.LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#E6222120"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:layout_toLeftOf="@+id/textView2"
                android:text="@string/party"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/guard"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/lin"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/orange_user" />

            <EditText
                android:id="@+id/user_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>
        <!-- <TextView
         android:layout_width="280dp"
         android:layout_height="1dp"
         android:text="@string/guard"
         android:layout_below="@+id/mobile_layout"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="15dp"
         android:background="@color/line"
         android:textStyle="bold" /> -->

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/mobile_layout"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/orange_lock" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@android:string/emptyPhoneNumber"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <!-- <TextView
             android:layout_width="280dp"
             android:layout_height="1dp"
             android:text="@string/guard"
             android:layout_below="@+id/password_layout"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="15dp"
             android:background="@color/line"
             android:textStyle="bold" /> -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_below="@+id/password_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#FFB328"
            android:text="@string/forgot" />

        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@+id/textView3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_line"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:gravity="center"
                android:layout_toLeftOf="@+id/txt_line1"
                android:text="party"
                android:background="@color/line"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/or" />
            <TextView
                android:id="@+id/txt_line1"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:text="@string/guard"
                android:background="@color/line"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_below="@+id/lin1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/fb" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_below="@+id/lin2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="1dp"
                android:text="@string/guard"
                android:background="@color/line"
                android:textSize="45sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin3"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/account" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonshape"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/sign" />

        <TextView
            android:id="@+id/txt_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textColor="#FFB328"
            android:text="@string/host" />

    </RelativeLayout>
</RelativeLayout>
